chore: 절대 경로로 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
     "baseUrl": ".", // 프로젝트 루트를 기준으로 설정
     "paths": {
       "@/*": ["src/*"] // '@'를 src 디렉토리로 매핑
-    }
+    },
+    "types": ["@chakra-ui/react"]
   },
+  "include": ["src"],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
