--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
-  "files": [],
   "compilerOptions": {
-    "baseUrl": ".", // 프로젝트 루트를 기준으로 설정
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"] // '@'를 src 디렉토리로 매핑
-    },
-    "types": ["@chakra-ui/react"]
+      "@/*": ["src/*"],
+    }
   },
-  "include": ["src"],
+  "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ]
 }
+
+
+
