--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@emotion/styled": "11.11.0",
     "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.8",
-    "pnpm": "^9.13.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.456.0",
+    "pnpm": "^9.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "react-slick": "^0.30.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
