--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "@emotion/styled": "11.11.0",
     "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.8",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.12.0",
     "lucide-react": "^0.456.0",
-    "pnpm": "^9.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
@@ -32,6 +31,8 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.13",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
